--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,21 @@
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://106.46.169.241:3306/blz?useUnicode=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false
+    username: developer
+    password: Bb6hXestiGkC4yfj
+    hikari:
+      connection-timeout: 30000
+      max-lifetime: 6000
+      maximum-pool-size: 500
 
+server:
+  port: 8001
+
+
+application:
+  sms:
+    appKey: lE3YoTeM3RiQPbj7u3dUHA==
+    secret: 955ae3267ebfa2cb342fdc4135eee33d
+  mail:
+    admin-email: 1213662626@qq.com
