--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,4 +1,14 @@
 spring:
+  freemarker:
+    check-template-location: true
+    template-loader-path: classpath:/templates/
+    cache: false
+    charset: UTF-8
+    content-type: text/html
+    expose-session-attributes: false
+    expose-request-attributes: false
+    request-context-attribute: request
+    suffix: .html
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://106.46.169.241:3306/blz?useUnicode=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false
