--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             <version>3.6.0</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
