--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,28 @@
             </plugin>
         </plugins>
 
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*Mapper.xml</include>
+                    <include>**/*MapperExt.xml</include>
+                </includes>
+            </resource>
+
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+                <excludes>
+                    <exclude>generator*.*</exclude>
+                    <exclude>static/.idea/*</exclude>
+                </excludes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
     </build>
 
 </project>
