更改测试手机号

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.0.2.RELEASE</version>
+        </dependency>
+
+
         <!--引入SMS功能包-->
         <dependency>
             <groupId>com.ailu.paas</groupId>
@@ -135,6 +142,12 @@
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
             <version>2.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
         </dependency>
 
     </dependencies>
