--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -21,6 +21,12 @@ spring:
       connection-timeout: 30000
       max-lifetime: 6000
       maximum-pool-size: 500
+  redis:
+    host: 192.168.0.22
+    port: 6379
+    password: redis
+    database: 2
+
 
 server:
   port: 8001
